--- a/content/post/2021-03-13-mixing-up-math-part-1/index.en.Rmd
+++ b/content/post/2021-03-13-mixing-up-math-part-1/index.en.Rmd
@@ -29,24 +29,30 @@ library(forcats)
 library(patchwork)
 ```
 
-According to a number of psychologists, we've been teaching math the wrong way. Instead of hammering away on the same topic for weeks, learners of math should mix up, or *interleave*, the concepts they practice. In a 2019 study, Doug Rohrer and colleagues claim to show that interleaved practice can have an effect size of no less than 0,8 (compared to standard *blocked* practice). For educational research this is a spectacular effect size. So let's dive into the details of the study and see if we can replicate the results.  
+According to a number of psychologists, we've been teaching math the wrong way. Instead of hammering away at the same topic for weeks, learners of math should mix up, or *interleave*, the concepts they practice. In a 2019 study, Doug Rohrer and colleagues claim to show that interleaved practice can have an effect size of no less than 0,8 (compared to standard *blocked* practice). For educational research this is a spectacular effect size. So let's dive into the details of the study and see if we can replicate the results.  
 
 
 ### Research Design
-The study consists of a so called field experiment. That means that the study was not performed under controlled conditions in a university room, but at several schools in Florida. One group of seventh grade kids received interleaved practice questions and the other group received blocked practice material. The questions were the same, so that only the ordering differed between the two groups. After practicing for about three months, the same surprise test was taken by all the kids.
+The study consists of a so called field experiment. That means that the study was not performed under controlled conditions in a university room, but in an everyday setting - in this case at several schools in Florida. One group of seventh grade kids received interleaved practice questions, while the other group received blocked practice questions. The questions were the same for both groups, so that only the ordering differed between them. After practicing for about three months, the same surprise test was taken by all students.
 
-In order to clearly identify what the critical issues with the study design are, we introduce some standard notation on causality. An annoying fact for the purpose of an analysis of causality is that we only ever observe one outcome of an event. If we are dealing with a suspected cause that we call treatment $T_{i}$, then for individual $i$ we may only observe $Y_{i}(1)$ and not $Y_{i}(0)$. That is, for person $i$ we may only observe the effect of $T_{i}=1$ at any one point in time. We could measure the outcome at a later point in time, where we could make sure that $T_{i}=0$, but then not all the conditions will be *exactly* the same. So we can never solve the fundamental problem of what would have happened if things would have been different.
+In order to clearly identify what the critical issues with the study design are, we introduce some standard notation on causality. An annoying but fundamental fact for the purpose of an analysis of causality is that we only ever observe one outcome of an event. If we are dealing with a suspected cause that we call treatment $T_{i}$, then for individual $i$ we may only observe $Y_{i}(1)$ and not $Y_{i}(0)$. That is, for person $i$ we may only observe the effect of $T_{i}=1$ at any one point in time. We could measure the outcome at a later point in time, where we could make sure that $T_{i}=0$, but then not all the conditions will be *exactly* the same. So we can never solve the fundamental problem of what would have happened if things would have been different.
 
-At this point one can either give up, or carry on pragmatically and - as one does so often in statistics in all kinds of guises - take the average of many responses to $T_{i}=1$ and $T_{i}=0$. This give us the average treatment effect that we will here simply write as $Y(1)-Y(0)$. 
+At this point one can either give up, or carry on pragmatically and take the average of many responses to $T_{i}=1$ and $T_{i}=0$. This give us the average treatment effect that we will here simply write as $Y(1)-Y(0)$. 
 
-There are two more problems though. One is the standard problem of inference to the larger population and the second is that of confounders. These can either be observed or unobserved. We write the observed confounders as $X$ and the unobserved as $U$. The problem with confounders is of course that if the treatment $T_{i}=1$ goes together with $X$ or $U$, we can mistakenly conclude that $T$ is doing the causal work. Confounders can cause error at two stages. The first occurs when a sample is taken and is denoted as $\Delta_{S}$ and the second arises from assigning the treatment and is hence written as $\Delta_{T}$. In both cases there are two types of confounders, so that what we are minimizing is 
+This approach leaves us with two problems. 
 
-$$Estimation\ error=(\Delta_{S_{X}}+\Delta_{S_{U}}) + (\Delta_{T_{X}}+\Delta_{T_{U}})$$.
-With regard to the sample part of the error in the estimation of the treatment effect, the authors have made no effort to select a random sample of the US or even Florida population. They persuaded five schools within a 30 min drive from their university to participate in the study and excluded schools that were low performers. There is reason to believe that students in Florida are not that different from at least students in other Western countries with respect to learning math. The effect may also hold only for the four math topics in the experiment that we will discuss shortly and not for others. In both cases it seems reasonable to assume that the results generalize to a wider population because the intervention is at such a fundamental level, but we should realize that they are assumptions.   
+1. There are confounders. These variables are causes that hide in the treatment group and make us falsely think that the treatment is the cause. Confounders can either be observed or unobserved. We write the observed confounders as $X$ and the unobserved as $U$. With this notation in hand we can now repeat ourselves by saying that if the treatment $T_{i}=1$ goes together with $X$ or $U$, we can mistakenly conclude that $T$ is doing the causal work. 
 
-The second part of the error concern treatment assignment. Here the authors took care to assign treatments randomly. In this case the unit that was assigned the treatment was the class, for obvious logistical reasons. The randomization assures that $(\Delta_{T_{X}}+\Delta_{T_{U}})$ goes to 0 in the limit. But for every finite sample, confounders could be unevenly distributed between the groups. The researchers therefore used a blocked design, which means that the confounder `Teacher` was evenly divided between the two groups. In practice, only teachers that taught several classes of the same level were included and evenly assigned `blocked` and `interleaved` classes. Read more on the advantages of blocked randomization [here](https://gking.harvard.edu/files/abs/matchse-abs.shtml). 
+2. Even if we established that there is a cause in a sample, we are unsure if it exists in the population.
 
-This means that $\Delta_{T_{X}}$ has been set to exactly 0 by design for $X$ = teacher effects. There can of course still be other confounders $U$. The expected value of the difference in $U$ between the two groups is 0, but not that many units have been assigned randomly. There are 787 students in the study, but only 54 classes have been assigned randomly to the two conditions. We will explore the consequences in part 2, where we turn to inference.
+Confounders can thus cause error at two stages. The first occurs when a sample is taken and is denoted as $\Delta_{S}$ and the second arises from assigning the treatment and is hence written as $\Delta_{T}$. In both cases there are two types of confounders, so that what we are minimizing is 
+
+$$Estimation\ error=(\Delta_{S_{X}}+\Delta_{S_{U}}) + (\Delta_{T_{X}}+\Delta_{T_{U}})$$
+With regard to the sample part of the error, the authors of the interleaving study have made no effort to select a random sample of the US or even Florida population. They persuaded five schools within a 30 min drive from their university to participate in the study, and excluded schools that were low performers. The effect may also hold only for the four math topics in the experiment that we will discuss shortly, and not for others. In both cases it seems reasonable to assume that the results generalize to a wider population, because math is it's own language and because the math questions seem representative of math curricula around the world. 
+
+The second part of the error concern treatment assignment. Here the authors took care to assign treatments randomly. In this case the treatment was not assigned to individuals, but to classes. From a logistics perspective, this is reasonable. The randomization assures that $(\Delta_{T_{X}}+\Delta_{T_{U}})$ goes to 0 in the limit. But for every finite sample, confounders could be unevenly distributed between the groups. The researchers therefore used a blocked design, which means that the confounder `Teacher` was evenly divided between the two groups. In practice, only teachers that taught several classes of the same level were included and evenly assigned `blocked` and `interleaved` classes. Read more on the advantages of blocked randomization [here](https://gking.harvard.edu/files/abs/matchse-abs.shtml). 
+
+This means that $\Delta_{T_{X}}$ has been set to exactly 0 by design for $X$ = teacher effects. There can of course still be other confounders $U$. The expected value of the difference in $U$ between the two groups is 0, but not that many units have been assigned randomly. No less than 787 students participated in the study, but only 54 classes were assigned randomly to the two conditions. We will explore the consequences in part 2, where we turn to inference.
 
 
 ### The data
@@ -74,14 +80,14 @@ rohrer %>% group_by(Group) %>%
 
 ```
 
-After three months of practicing a surprise test was taken. It contained 16 questions on 4 topics:
+After three months of practicing the math questions, a surprise test was taken. It contained 16 questions on 4 topics:
 
-*   Writing proportional formulas
-*   Algebra with parentheses
-*   Solving inequalities
-*   Calculations on circles 
+*   writing proportional formulas
+*   algebra with parentheses
+*   solving inequalities
+*   calculations on circles 
 
-We create variables with subscores on these 4 topics on the surprise test, as well as their sum. 
+Below, we create new variables with the total number of points scores for each of the four topics as well as the sum total on all questions. 
 
 ```{r}
 # summing individual scores into total and standardize. Also summing partial scores 
@@ -101,7 +107,7 @@ rohrer <- rohrer %>% mutate(Group = as.factor(Group),
 
 ### Visual Exploration
 
-We first inspect the results of students in the two groups per school visually. 
+We first inspect the results of students in the two groups per school in histograms, so that no data points are lost and the distribution of the scores is preserved.   
 
 ```{r}
 # Results total by School and Group in a histogram; alpha can be adjusted to make colors appear; 
@@ -171,9 +177,9 @@ p1/ p2/ p3
 
 ```
 
-Here the results are more ambiguous. For some teachers we observe the same stark difference in test results in favor of the interleaved group. But for others the results seem quite similar at first glance. There seems then to be significant variation between teachers in the difference between the groups. This topic will be explored in depth in the analysis in part 2. 
+Here the results are more ambiguous. For some teachers we observe the same stark difference in test results in favor of the interleaved group. But for others the results seem quite similar, at first glance. The size of the difference between the two groups seems to depend on the teacher them. This topic will be explored in depth in the analysis in part 2. 
 
-So far we have looked at the total score on the surprise test. We now split up the scores in the four topics that were covered. The order matters here. In the `blocked` condition students first completed questions on formulas for proportional relations, solved inequalities in the second block, etc. We notice a clear pattern. 
+So far we have looked at the total score on the surprise test. We now split up the scores in the four topics that were covered. The order matters here. In the `blocked` condition, students first completed questions on formulas for proportional relations, they solved inequalities in the second block, etc. Moving chronologically from left to right and starting at the top, we notice a clear pattern. 
 
 ```{r}
 # Write a function for making a histogram based on input data
@@ -227,9 +233,9 @@ patch3 + plot_annotation(
 )
 ```
 
-The slope of the lines give us a sense about the rate of increase by interleaving questions and more clearly indicate that the effect of interleaving declines for topics that have been practiced in the blocked group more recently.  
+The slope of the lines give us a sense about the rate of increase in math performance by interleaving questions. It more clearly indicates that the effect of interleaving declines for topics that have been practiced in the blocked group more recently.  
 
-We also note that the mean for points scored on questions about formulas is living in empty space. With regard to this topic the mean gives a poor summary of what is going on. It would seem that for this topic students either get it or not. We see that the interleaving condition moves students away from the no points group to the 4 points group. This binary nature would suggest that a proportion (of students who got 3 or 4 questions correct) would be a better way to describe and later model the data than the mean. However, for the other questions the mean seems to be a fine summary. And when we add up the points on all topics, we see the points are quite evenly distributed.    
+We also note that the mean for points scored on questions about formulas is living in empty space. With regard to this topic the mean gives a poor summary of what is going on. It would seem that for this topic students either get it or not. We see that the interleaving condition moves students away from the '0 points' group to the '4 points' group. This binary nature would suggest that a proportion (of students who got 3 or 4 questions correct) would be a better way to describe the data than the mean. However, for the other questions the mean seems to be a fine summary. And when we add up the points on all topics, we see the points are quite evenly distributed.    
 
 ```{r warning = FALSE}
 # input total points scored into the scores_topic function
