--- a/content/post/2021-03-31-math-grit-and-matching-part-4/index.en.Rmd
+++ b/content/post/2021-03-31-math-grit-and-matching-part-4/index.en.Rmd
@@ -23,13 +23,13 @@ We return once again to the study that investigated the effect of a grit interve
 In the first section it is explained what model dependence is. Next, we discuss remedies, which consist of regularization and matching methods. Finally, I carry out a preferred matching method and see what happens to the estimated effect size.
 
 ## Model dependence
-The standard practice of model fitting goes something like this. Fit a line through the data. If it doesn't match closely, transform the data or fit some kind of curve that follows the data more closely. Then look at the distance of the errors from the curve and possibly change the distribution that models the spread of the errors. This procedure seems reasonable. However, apart from the risk of overfitting, there is a lot of freedom for researchers to choose a model that inflates the desired result. 
+The standard practice of model fitting goes something like this. Fit a line (or hyperplane) through the data. If it doesn't match closely, transform the data or fit some kind of curve (or curved hypersurface) that follows the data more closely. Then look at the distance of the errors from the curve and possibly change the distribution that models the spread of the errors. This procedure seems reasonable. However, apart from the risk of overfitting, there is a lot of freedom for researchers to choose a model that inflates the desired result. 
 
 Similarly, researchers choose whether to include variables or not in their models. In fact, we saw in part 2 that the exclusion of variables had a sizable effect on the estimation of the effect of `grit`. The result is, in other words, not robust to variable selection. 
 
-These phenomena are referred to as 'model dependance', which arises from 'researcher degrees of freedom' (in choosing variables and choosing a model). The danger of inflating results is not imaginary, given that even the social science results published in the best journals [often fail to replicate](https://www.nature.com/articles/s41562-018-0399-z).
+These phenomena are referred to as 'model dependence', which arises from 'researcher degrees of freedom' (in choosing variables and choosing a model). The danger of inflating results is not imaginary, given that even the social science results published in the best journals [often fail to replicate](https://www.nature.com/articles/s41562-018-0399-z).
 
-If one wanted to show the amount of model dependence, one would have to run hundreds of thousands of models, including all the combinations of selected variables, interactions, squared terms, etc. We will not do that here (but see [this paper](https://gking.harvard.edu/files/abs/counterf-abs.shtml) for an interesting approach). As we already noted significant model dependence in part 2 of this series, we focus on ways to reduce model dependance. 
+If one wanted to show the amount of model dependence, one would have to run hundreds of thousands of models, including all the combinations of selected variables, interactions, squared terms, etc. We will not do that here (but see [this paper](https://gking.harvard.edu/files/abs/counterf-abs.shtml) for an interesting approach). As we already noted significant model dependence in part 2 of this series, we focus on ways to reduce model dependence. 
 
 In the next section we try to reduce researcher influence on variable selection. We then, in the final section, use matching methods in which we prune data points until we are left with closely matched pairs of subjects that are in the treatment and control groups.
 
@@ -50,15 +50,15 @@ Our goal in this section is to minimize the influence of the researcher on varia
 
 There are two important ways in which the penalty term can be evaluated. To understand this, we must be a little bit more precise in our mathematical terminology. In order to minimize something we need a norm that gives us measuring tools for saying how big the thing is that we are minimizing. The L2 norm tells us to square the absolute difference between two vectors (the outcomes y and the predictions based on the vectors of coefficients multiplied by the data matrix). The choice of for L2 norm results in ridge regression. See the formula below. 
 ![](Ridge_norm.png)
-The value of lambda is chosen by cross validation. In this method the data set is split into a training set and a test set. After building the model based on the training data, it is evaluated on the test data set, which it has not seen before. Specifically, we run the model for lots of values of lambda in a reasonable interval and choose the one that minimizes the error in a test data set.
+The value of lambda is chosen by cross validation. In cross validation the data set is split into a training set and a test set. After building the model based on the training data, it is evaluated on the test data set, which it has not seen before. Specifically, we run the model for lots of values of lambda in a reasonable interval and choose the one that minimizes the error in a test data set (or multiple test data sets after splitting the data many times).
 
-If we do not square the coefficient term and just take its absolute value, we are using an L1 norm. It results in lasso regression. For more on norms, see [this lecture](https://www.youtube.com/watch?v=NcPUI7aPFhA&list=PLUl4u3cNGP63oMNUHXqIUcrkS2PivhN3k&index=10). 
+By contrast, if we do not *square* the coefficient term and just take its absolute value, we are using an L1 norm. It results in lasso regression. For more on norms, see [this lecture](https://www.youtube.com/watch?v=NcPUI7aPFhA&list=PLUl4u3cNGP63oMNUHXqIUcrkS2PivhN3k&index=10). 
 ![](Lasso_norm.png)
-Lasso more aggressively eliminates coefficients. 
+Lasso more aggressively eliminates coefficients than ridge regression. This has to do with the norms. In the L2 norm (in ridge), small coefficients are penalized less severely than in L1. After all, in L2 coefficients are squared in the penalty term. If they have absolute value < 1 (and are nonzero), then squaring them makes the penalty for adding them smaller. So they stay in the model for longer. 
 
 Both Lasso and Ridge regression are equivalent to a Bayesian regression with a harsh prior. This point of view is much more elegant, but I will stick with the regular interpretation here. Read more on the Bayesian point of view on Lasso and Ridge regression [here](https://bjlkeng.github.io/posts/probabilistic-interpretation-of-regularization/).
 
-So let us apply these methods to out data set. Although we want to minimize the influence of the researcher, we hand pick only those variables that were measured before the outcome (`mathscore2`) was measured. Otherwise the results of the model are not sensible. We also scale variables that were not scaled already, so that they are weighted equally by the penalty term lambda. 
+So let us apply these methods to our data set. Although we want to minimize the influence of the researcher, we hand pick only those variables that were measured before the outcome (`mathscore2`) was measured. Otherwise the results of the model are not sensible. We also scale variables that were not scaled already, so that they are weighted equally by the penalty term lambda. 
 
 ```{r warning=FALSE, message=FALSE}
 grit <- bind_rows(sample1,sample2) %>% 
@@ -102,7 +102,7 @@ plot(ridge_cv)
 ```
 The dotted vertical line on the left shows the value of (the log of) lambda for which the mean squared error in the test data set is minimal. The dotted line to the right adds one standard error to this value and is often used because it is more conservative. There is no deep theory behind choosing this value. It is rather an extra barrier against overfitting that [works well in practice](https://stats.stackexchange.com/questions/138569/why-is-lambda-within-one-standard-error-from-the-minimum-is-a-recommended-valu). 
 
-The number 16 on top of the graph refers to the number of coefficients that are left in the model. Because of the L2 norm for the penalty term in ridge regression, small coefficients are penalized less severely than in L1. The reason is that squaring nonzero coefficients with absolute value < 1 makes them smaller in absolute terms and hence decreases the penalty term. 
+The number 16 on top of the graph refers to the number of coefficients that are left in the model. 
 
 ```{r}
 # setting alpha to 1 results in lasso regression
@@ -116,7 +116,7 @@ legend("bottomright", lwd = 1, col = 1:6, legend = colnames(X), cex = .7)
 abline(v=log(ridge_cv$lambda.min), col='grey', lwd=2, lty="dashed")
 abline(v=log(ridge_cv$lambda.1se), col='black', lwd=2, lty="dashed")
 ```
-In the plot above we see how coefficients shrink by increasing the value of lambda in ridge regression. The dashed grey line shows the log of lambda for which the mean squared error in the test set in minimal and the black dashed line adds one standard error to this value. We see that indeed none of the coefficients shrinks to zero for either lambda.
+In the plot above we see how coefficients shrink by increasing the value of lambda in ridge regression. The dashed grey line shows the log of lambda for which the mean squared error in the test set in minimal and the black dashed line denotes the log of the minimizing lambda plus a standard error. We see that indeed none of the coefficients shrinks to zero for either lambda.
 
 Let's repeat the analysis for the L1 norm, which leads to lasso regression.
 
@@ -141,10 +141,10 @@ Choosing lambda plus one SE gets rid of the bunch of coefficients that may not b
 ```{r}
 coef(lasso_cv, s = lasso_cv$lambda.1se)
 ```
-If we go with this value of lambda, we are left with verbalscore1, mathscore1, csize, grit, classid, grit_survey1 and raven. Let's check out the ramifications of these variable selections as we now turn to matching.  
+If we go with this value of lambda, we are left with the variables verbalscore1, mathscore1, csize, grit, classid, grit_survey1 and raven. Let's check out the ramifications of these variable selections as we now turn to matching.  
 
 ## Methods of Matching
-There are several methods of 'mathing' - that is, pruning data until we are left with closely matched pairs of observations that we can compare. We first discuss the most popular one, propensity score matching, and the problems that come with it. We then lay out a preferred alternative method.
+There are several methods of 'matching' - that is, pruning data until we are left with closely matched pairs of observations that we can compare. We first discuss the most popular one, propensity score matching, and the problems that come with it. We then lay out a preferred alternative method.
 
 ### Propensity Score Matching
 The idea behind propensity score matching is to make a model that predicts which individual is assigned to the treatment group. Since an individual is either in the treatment or control condition, this model predicts a binary variable and can be for example a logistic model. It is then possible to compare pairs of individuals that were equally likely to get the treatment, but where one actually got the treatment and one didn't. 
@@ -170,7 +170,7 @@ The best way to deal with this trade off is to make it visible. To this end, we 
 We will carry out matching with varying variable selections. These variables are the criteria on which we balance the treatment and control group, so choosing them is a big deal. 
 
 ### Author variable selection
-We start with the variables that were in the author's original model. We use data from both waves of the study, because we hope that matching can remedy possible experimental design flaws from the first wave (note that model dependence creeps in here). 
+We start with the variables that were in the author's original model. We use data from both waves of the study, because we hope that matching can remedy possible experimental design flaws from the first wave (note that model dependence creeps in here - we could run the analysis with only sample2 as well). 
 
 ```{r variables, warning=FALSE}
 # combine the two waves of the Grit study and select the variables in the author's model
@@ -184,7 +184,7 @@ sample_comb <- bind_rows(sample1,sample2) %>%
 glimpse(sample_comb)
 ```
 
-After dropping NA values, we have 1758 observations left. The rest was left out because at least one value was missing on the variables that we selected. (An avenue that we not explore here is to first impute missing values and then perform matching.) Next, we let the algorithm in the `MatchingFrontier` package calculate the optimal imbalance for every number of pruned observations. 
+We leave out observations where at least one value was missing on the variables that we selected and have 1758 observations left. (An avenue that we not explore here is to first impute missing values and then perform matching.) Next, we let the algorithm in the `MatchingFrontier` package calculate the optimal imbalance for every number of pruned observations. 
 
 ```{r frontier, warning=FALSE}
 # collect the names of the selected variables in a vector
@@ -197,7 +197,7 @@ frontier <- makeFrontier(dataset = sample_comb,
 
 plot(frontier)
 ```
-We see that the Mahalanobis distance between matched pairs decreases smoothly as we prune more observations. There are quick gains for the first 500 observations that we throw away, but the improvement afterward is nothing to sniff at either.
+We see that the Mahalanobis distance between matched pairs decreases smoothly as we prune more observations. There are quick gains in distance reduction for the first 500 observations that we throw away, but the improvement afterward is nothing to sniff at either.
 
 We now run the model that estimates the effect of `grit` on maths scores for every number of pruned observations. 
 ```{r effects, warning=FALSE, message=FALSE, results='hide'}
@@ -267,10 +267,10 @@ plot(mahal.estimates,
 )
 
 ```
-We see again that as biased is reduced, we are led to believe that the effect is quite a bit higher than we thought. Towards the end, the estimate becomes highly model dependent though as can be seen from the wide band at the end. 
+We see again that as biased is reduced, we are led to believe that the effect is quite a bit higher than we thought. Towards the end, the estimate becomes highly model dependent though, as can be seen from the wide band at the end. 
 
 ### All pre-treatment variables
-The choice for the lasso variables was based on adding a SE to the minimizing lambda. That choice could have been made differently. As were are trying to reduce model dependence, we should run the analysis with all 16 independent variables that were measured before the intervention occured. 
+The choice for the lasso variables was based on adding a SE to the minimizing lambda. That choice could have been made differently. As we are trying to reduce model dependence, we should run the analysis with all 16 independent variables that were measured before the intervention occurred. 
 ```{r warning=FALSE, message=FALSE, results='hide'}
 sample_comb <- bind_rows(sample1,sample2) %>% 
   filter(inconsistent=="0") %>% 
@@ -311,6 +311,21 @@ plot(mahal.estimates,
 When we balance based on all pre-treatment variables, we note that the same tendency for higher effect size estimates occurs. There is a steep downward turn at the end though, which is surrounded by a huge amount of uncertainty that arises from model dependence. 
 
 ## Conclusion
-The initial surprise over the enhanced effect size of `grit` due to matching dissipates in the end then. There is no theoretical model or motivation for the author's variable selection. The minimizing lambda + 1 SE variable selection based on the lasso regression is supported by practitioners of the technique. But there is no theoretical basis for choosing this value of lambda over the minimizing lambda itself, which kept all variables in the model except for one. 
+What becomes clear from all of our analyses of the Grit data set is that there are many ways to spin the data. There are many choices the researcher can make that can all be supported with a plausible story. That is, the researcher can choose
 
-The conservative approach then is to not value the results of the lasso variable selection much more than the model using all pre-treatment variables. This suggests that the effect size may be a bit higher than about 0.2, as previous analyses suggested, but that there is too much uncertainty due to model dependence to put a number on it. 
+1. the data set to analyze (sample1 or sample2 or both)
+2. the observations to leave out of the analysis (or which imputation method to use)
+3. the variables to include in the models
+4. the appropriate models to use (classical, Bayesian, multilevel, penalized regression, regression trees, matching)
+5. the specifications of the models
+
+For causal analysis, the matching approach we followed promises to step back from these choices and provide a method that is relatively agnostic to most of these choices. It even puts a number on the model dependence of an estimated effect so that we can gauge how subjective our results are. 
+
+Yet even for this approach the selection of the appropriate data set as well as the variables to include is up to the researcher. 
+
+There is a trade off here. One option is to be agnostic with respect to which variables explain `mathscore2`. In that case we may balance the treatment and control groups with respect to variables that are irrelevant and we increase uncertainty in the estimated effect size. This approach to matching suggested that the effect size may be a bit higher than about 0.2, as previous analyses suggested. However, there is massive uncertainty due to model dependence, so that the result could also be a lot smaller. The uncertainty is too big to put a number on it. 
+
+The other option is to be more assertive with regard to the variables that are relevant for balancing the treatment and control group. The variables that were selected by researcher who conducted the study seem rather arbitrary and give results on the high end of the multiverse of possible effect sizes. We then let the lasso regression pick more relevant variables for us, which also led to a higher estimate of the effect of `grit`. However, if we run with this outcome, we rely on the minimizing lambda + 1 SE choice that is supported by practitioners of the technique. There is no theoretical basis for choosing this value of lambda over the minimizing lambda itself, which kept all variables in the model except for one. 
+
+The realization that even a RCT can be analyzed in so many ways should not lead to the conclusion that all knowledge is relative. It should make one skeptical of the results of one particular regression though. When we resist the temptation to go with one particular model or one particular set of variables, then an effect size of about 0.2 - as was also found by the conservative matching approach - seems the most reasonable estimate. The uncertainty around this number can be expressed in so many ways (relevant area of the Bayesian posterior, in terms of the slope of the likelihood surface, amount of model dependence), that it depends on the way that the interpreter of the analysis thinks about uncertainty.  
+
